--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "random-int": "^2.0.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
+    "uuidv4": "^6.2.6",
     "zone.js": "~0.11.3"
   },
   "devDependencies": {
